language/move-lang/tests/move_check/expansion/use_nested_self_duplicate.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/use_nested_self_duplicate.move:9:14
  │
8 │     use 0x2::X;
  │              - Alias previously defined here
9 │     use 0x2::X::Self;
  │              ^ Duplicate module alias 'X'. Module aliases must be unique within a given namespace

